# zolana-examples

./: .gitignore  README.md
escrow-program/: .gitignore  BENCHMARK.md  Cargo.toml  README.md  timelock-escrow-keys.CHECKSUM  timelock_escrow.md
escrow-program/.cargo/: config.toml
escrow-program/program/: Cargo.toml
escrow-program/program/src/: error.rs  lib.rs
escrow-program/program/src/instructions/: escrow.rs  mod.rs  shared.rs  verifier.rs  withdraw.rs
escrow-program/program/src/verifying_keys/: escrow.rs  mod.rs  withdraw.rs
escrow-program/program/tests/: error_codes.rs
escrow-program/prover/: Cargo.toml  build.rs
escrow-program/prover/circuits/: go.mod  go.sum  main.go
escrow-program/prover/circuits/escrow/: escrow.go
escrow-program/prover/circuits/escrowterms/: escrowterms.go
escrow-program/prover/circuits/withdraw/: withdraw.go
escrow-program/prover/server/: .gitignore  BENCHMARKS.md  docker-compose.yml  go.mod  integration_test.go  justfile  main.go  redis_queue_test.go
escrow-program/prover/server/circuits/: CLAUDE.md  nullifier_tree.go
escrow-program/prover/server/circuits/gadget/: conditional_cmp.go  full_field_compare.go  hashchain.go  indexed.go  is_less_test.go  leaf_hash_gadget_test.go  poseidon.go  proof_gadgets.go
escrow-program/prover/server/circuits/spp_merge/: circuit.go  circuit_test.go  encryption.go  inputs.go  outputs.go  prove_test.go  vector_test.go  zone.go  zone_prove_test.go
escrow-program/prover/server/circuits/spp_transaction/: address_test.go  balance.go  balance_test.go  circuit.go  circuit_test.go  confidential_test.go  inputs.go  inputs_test.go  outputs.go  outputs_test.go  p256.go  p256_test.go  private_tx_hash.go  private_tx_hash_test.go  utxo.go  utxo_test.go  zone_authority_test.go  zone_test.go
escrow-program/prover/server/circuits/verifiable-encryption/: poseidon_kdf.go
escrow-program/prover/server/circuits/verifiable-encryption/aes/: block.go  ctr.go  gadget.go  tables.go
escrow-program/prover/server/circuits/zone-utils/: private_tx_hash.go
escrow-program/prover/server/merkle-tree/: indexed_merkle_tree_test.go
escrow-program/prover/server/prover-test/nullifier_tree/: address_append_explicit.go  address_append_explicit_test.go  batch_address_append_circuit_test.go  test_data_helpers.go
escrow-program/prover/server/prover-test/poseidon/: poseidon.go
escrow-program/prover/server/prover-test/spp/parse/: fields.go  (+1 more)
escrow-program/prover/server/prover/common/: circuit_utils.go  key_downloader.go  lazy_key_manager.go  lazy_key_manager_test.go  marshal.go  marshal_confidential_test.go  proof_request_meta.go  proving_keys_utils.go  types.go
escrow-program/prover/server/prover/merge/: load_test.go  marshal.go  marshal_test.go  params.go  prove.go  r1cs.go  setup.go  witness.go
escrow-program/prover/server/prover/nullifier_tree/: marshal.go  params.go  prove.go  r1cs.go  setup.go  witness.go
escrow-program/prover/server/prover/transfer/: marshal.go  params.go  prove.go  r1cs.go  setup.go  witness.go
escrow-program/prover/server/prover/transfer_eddsa_only/: marshal.go  params.go  prove.go  r1cs.go  setup.go  variant.go  witness.go
escrow-program/prover/server/scripts/: generate_keys_merge.sh  generate_keys_transfer.sh  publish_keys_release.sh  regenerate_all_vkeys.sh
escrow-program/prover/server/server/: auth.go  metrics.go  queue.go  queue_job.go  server.go
escrow-program/prover/src/: escrow.rs  escrow_terms.rs  ffi.rs  lib.rs  proof.rs  utxo.rs  withdraw.rs
escrow-program/sdk/: Cargo.toml
escrow-program/sdk/src/: lib.rs  prover.rs  shared.rs
escrow-program/sdk/src/instructions/escrow/: instruction.rs  mod.rs  proof.rs
escrow-program/sdk/src/instructions/withdraw/: instruction.rs  mod.rs  proof.rs
escrow-program/sdk/src/state/: escrow.rs  mod.rs
escrow-program/sdk/tests/: escrow_circuit.rs  withdraw_circuit.rs
escrow-program/sdk/tests/shared/: mod.rs
escrow-program/test/: Cargo.toml
escrow-program/test/tests/: bench_cu.rs  escrow.rs  shared.rs
rust-client/: .env.example  Cargo.toml  README.md
rust-client/.cargo/: config.toml
rust-client/examples/: create_private_wallet.rs  deposit.rs  deposit_instruction.rs  sync_balance.rs  transfer.rs  transfer_instruction.rs  wallet_authority.rs  withdraw.rs  withdraw_instruction.rs
rust-client/src/: lib.rs
swap-program/program/: Cargo.toml
swap-program/program/src/: error.rs  lib.rs
swap-program/program/src/instructions/: cancel.rs  make.rs  mod.rs  shared.rs  take.rs  take_verifiable_encryption.rs  verifier.rs
swap-program/program/src/verifying_keys/: cancel.rs  make.rs  mod.rs  take.rs  take_verifiable_encryption.rs
swap-program/program/tests/: error_codes.rs  windows.rs
swap-program/prover/: Cargo.toml  build.rs
swap-program/prover/circuits/: go.mod  main.go
swap-program/prover/circuits/cancel/: cancel.go
swap-program/prover/circuits/make/: make.go
swap-program/prover/circuits/orderterms/: orderterms.go
swap-program/prover/circuits/take/: take.go
swap-program/prover/circuits/take_verifiable_encryption/: take.go
swap-program/prover/circuits/witness/: witness.go
swap-program/prover/src/: cancel.rs  ffi.rs  lib.rs  make.rs  order_terms.rs  proof.rs  take.rs  take_verifiable_encryption.rs
swap-program/sdk/: Cargo.toml
swap-program/sdk/src/: lib.rs  prover.rs  shared.rs
swap-program/sdk/src/index/: fixture.rs  maker.rs  mod.rs  poll.rs  scan.rs  taker.rs
swap-program/sdk/src/instructions/cancel/: instruction.rs  mod.rs  proof.rs
swap-program/sdk/src/instructions/make/: instruction.rs  mod.rs  proof.rs
swap-program/sdk/src/instructions/take/: instruction.rs  mod.rs  proof.rs
swap-program/sdk/src/instructions/take_verifiable_encryption/: encryption.rs  instruction.rs  mod.rs  proof.rs
swap-program/sdk/src/state/: mod.rs  order.rs
swap-program/sdk/tests/: cancel_circuit.rs  make_circuit.rs  take_circuit.rs  take_verifiable_encryption_circuit.rs
swap-program/sdk/tests/shared/: mod.rs
swap-program/test/: Cargo.toml
swap-program/test/tests/: bench_cu.rs  cancel.rs  shared.rs  swap.rs
(+49 files in other folders)
