[workspace]
resolver = "2"
members = ["program", "sdk", "prover", "test"]

[workspace.package]
edition = "2021"

# The zolana crates are pulled from the private zolana repo by git, pinned to a
# rev on main; the solana-* and other crates are pinned to the versions the SDK
# builds against. Fetching the private repo needs an SSO-authorized SSH key and
# cargo's git-fetch-with-cli (see .cargo/config.toml).
[workspace.dependencies]
zolana-account-checks = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-client = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-hasher = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-interface = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-keypair = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-merkle-tree = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-program-test = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-test-utils = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-transaction = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-tree = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-wallet = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }

groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208" }
light-program-profiler = { git = "https://github.com/Lightprotocol/light-program-profiler", rev = "862df52dd8c6099c11f795553514c654f3c2c459" }

anyhow = "1.0"
num-bigint = "0.4.6"
pinocchio = "0.11"
serde_json = "1.0"
thiserror = "2.0"
wincode = { version = "0.5", features = ["derive"] }
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-address-lookup-table-interface = { version = "3.0", features = ["bytemuck", "bincode"] }
solana-bn254 = "3.2.1"
solana-compute-budget-interface = "3.0"
solana-instruction = "3.4"
solana-keypair = "3.1.2"
solana-message = "3.1"
solana-program-error = "3.0"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
solana-signature = "3.4"
solana-signer = "3.0"
solana-transaction = "3.1"
