[workspace]
resolver = "2"
members = ["program", "sdk", "prover", "test"]

[workspace.package]
edition = "2021"

# The zolana crates are pulled from the zolana repo by git, pinned to a rev on
# main; the solana-* and other crates are pinned to the versions the SDK builds
# against.
[workspace.dependencies]
zolana-account-checks = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-client = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-hasher = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-interface = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-keypair = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-merkle-tree = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-program-test = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-test-utils = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-transaction = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-tree = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-wallet = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }

groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208" }
light-program-profiler = { git = "https://github.com/Lightprotocol/light-program-profiler", rev = "862df52dd8c6099c11f795553514c654f3c2c459" }

anyhow = "1.0"
num-bigint = "0.4.6"
pinocchio = "0.11"
serde_json = "1.0"
thiserror = "2.0"
wincode = { version = "0.5", features = ["derive"] }
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-address-lookup-table-interface = { version = "3.0", features = ["bytemuck", "bincode"] }
solana-bn254 = "3.2.1"
solana-compute-budget-interface = "3.0"
solana-instruction = "3.4"
solana-keypair = "3.1.2"
solana-message = "3.1"
solana-program-error = "3.0"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
solana-signature = "3.4"
solana-signer = "3.0"
solana-transaction = "3.1"
