[package]
name = "timelock-escrow-program"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
name = "timelock_escrow_program"
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []
profile-program = ["light-program-profiler/profile-program"]

[dependencies]
groth16-solana = { workspace = true, features = ["bsb22"] }
light-program-profiler = { workspace = true }
pinocchio = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }
thiserror = { workspace = true }
wincode = { workspace = true }
zolana-account-checks = { workspace = true }
zolana-hasher = { workspace = true, features = ["poseidon"] }
zolana-interface = { workspace = true, features = ["solana"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
