[package]
name = "timelock-escrow-sdk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
timelock-escrow-program = { path = "../program" }
timelock-escrow-prover = { path = "../prover" }
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-instruction = "3.4"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
wincode = { version = "0.5", features = ["derive"] }
zolana-interface = { git = "ssh://git@github.com/helius-labs/zolana.git", branch = "jorrit/feat-escrow-example" }
zolana-keypair = { git = "ssh://git@github.com/helius-labs/zolana.git", branch = "jorrit/feat-escrow-example" }
zolana-transaction = { git = "ssh://git@github.com/helius-labs/zolana.git", branch = "jorrit/feat-escrow-example" }

[dev-dependencies]
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208", features = ["bsb22"] }
solana-keypair = "3.1.2"
solana-signature = "3.4"
