[package]
name = "timelock-escrow-test"
version = "0.1.0"
edition.workspace = true
publish = false
autotests = false

[dependencies]
anyhow = { workspace = true }
timelock-escrow-program = { path = "../program" }
timelock-escrow-prover = { path = "../prover" }
timelock-escrow-sdk = { path = "../sdk" }
solana-address = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
zolana-client = { workspace = true, features = ["indexer-api", "solana-rpc"] }
zolana-interface = { workspace = true }
zolana-keypair = { workspace = true }
zolana-program-test = { workspace = true }
zolana-test-utils = { workspace = true }
zolana-transaction = { workspace = true }

[dev-dependencies]
bincode = "1.3"
num-bigint = { workspace = true }
zolana-hasher = { workspace = true, features = ["poseidon"] }
zolana-merkle-tree = { workspace = true }
zolana-tree = { workspace = true }
zolana-wallet = { workspace = true }
mollusk-svm = "0.3.0"
light-program-profiler = { workspace = true, features = ["mollusk"] }
mollusk-solana-account = { package = "solana-account", version = "2.2" }
mollusk-solana-instruction = { package = "solana-instruction", version = "2.2" }
mollusk-solana-pubkey = { package = "solana-pubkey", version = "2.2" }

[[test]]
name = "escrow"
path = "tests/escrow.rs"

[[test]]
name = "bench_cu"
path = "tests/bench_cu.rs"
