[package]
name = "swap-program"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "swap_program"
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]
test-sbf = []
profile-program = ["light-program-profiler/profile-program"]

[dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive"] }
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208", features = ["bsb22"] }
light-program-profiler = { git = "https://github.com/Lightprotocol/light-program-profiler", rev = "862df52dd8c6099c11f795553514c654f3c2c459" }
pinocchio = { version = "0.11", features = ["cpi"] }
solana-program-error = "3.0"
thiserror = "2.0"
wincode = { version = "0.5", features = ["derive"] }
zolana-account-checks = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-hasher = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540", features = ["poseidon"] }
zolana-interface = { git = "ssh://git@github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540", features = ["solana"] }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
