[package]
name = "swap-sdk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
borsh = { version = "1.5", default-features = false, features = ["derive"] }
swap-program = { path = "../program" }
swap-prover = { path = "../prover" }
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-instruction = "3.4"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
wincode = { version = "0.5", features = ["derive"] }
zolana-client = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-interface = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-keypair = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-transaction = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }

[dev-dependencies]
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208", features = ["bsb22"] }
solana-keypair = "3.1.2"
solana-signature = "3.4"
