[package]
name = "swap-test-validator"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[dependencies]
anyhow = "1.0"
swap-program = { path = "../program" }
swap-prover = { path = "../prover" }
swap-sdk = { path = "../sdk" }
solana-address = { version = "2.6", features = ["atomic", "borsh", "bytemuck", "copy", "decode", "wincode"] }
solana-address-lookup-table-interface = { version = "3.0", features = ["bytemuck", "bincode"] }
solana-compute-budget-interface = "3.0"
solana-instruction = "3.4"
solana-keypair = "3.1.2"
solana-message = "3.1"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
solana-signer = "3.0"
solana-transaction = { version = "3.1", features = ["bincode"] }
zolana-client = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540", features = ["indexer-api", "solana-rpc"] }
zolana-interface = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-keypair = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-program-test = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-test-utils = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-transaction = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-user-registry-interface = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540", features = ["solana"] }

[dev-dependencies]
bincode = "1.3"
borsh = { version = "1.5", default-features = false, features = ["derive"] }
cucumber = "0.22"
futures = "0.3.31"
groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana", rev = "43fee1a67e91c0df7bb4edad5ba87ae4602aa208", features = ["bsb22"] }
num-bigint = "0.4.6"
zolana-hasher = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540", features = ["poseidon"] }
zolana-merkle-tree = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
zolana-tree = { git = "https://github.com/helius-labs/zolana", rev = "8d4b81c4ffdde97fa6497f07feb6caeb92c42540" }
mollusk-svm = "0.3.0"
light-program-profiler = { git = "https://github.com/Lightprotocol/light-program-profiler", rev = "862df52dd8c6099c11f795553514c654f3c2c459", features = ["mollusk"] }
mollusk-solana-account = { package = "solana-account", version = "2.2" }
mollusk-solana-instruction = { package = "solana-instruction", version = "2.2" }
mollusk-solana-pubkey = { package = "solana-pubkey", version = "2.2" }

[[test]]
name = "bench_cu"
path = "tests/bench_cu.rs"

[[test]]
name = "swap"
path = "tests/swap.rs"

[[test]]
name = "cancel"
path = "tests/cancel.rs"
